add trochoidal wave function

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <title></title>
   </head>
   <body>
-    <div id="sphereContainer1"></div>
+    <!-- <div id="sphereContainer1"></div> -->
+    <div id="waveContainer1"></div>
     <script type="module" src="src/js/main.js"></script>
   </body>
 </html>
